--- a/bank app/index.css
+++ b/bank app/index.css
@@ -6,59 +6,63 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: black;
   background-color: #9900ff;
 }
 
-#loginForm {
-  width: 50%;
-  margin: auto;
+.container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 20px 0px;
 }
 
-#loginForm > div > p {
+.container > div > h3 {
   color: lavender;
+  margin-bottom: 10px;
+}
+
+.container > div > p {
+  color: lavender;
+  font-size: small;
+}
+
+.container > div > p > a {
+  color: rgb(0, 225, 255);
+}
+
+.loginForm {
+  width: 200px;
+  background-color: lavender;
+  padding: 20px;
+  border-radius: 2px;
+}
+
+.loginForm input {
+  border: 1px solid gray;
+  border-radius: 2px;
+  padding: 5px 10px;
+  outline: none;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.loginForm input[type="submit"] {
+  color: lavender;
+  background-color: black;
+  border: 1px solid black;
   font-weight: bold;
 }
 
-#loginForm input {
-  border: none;
-  border-radius: 2px;
-  padding: 5px;
-  outline: none;
-  width: 100px;
-  text-align: center;
-}
-
-#loginForm Button {
-  border: none;
-  border-radius: 10px;
-  padding: 5px 20px;
-  outline: none;
-  cursor: pointer;
+.loginForm input[type="submit"]:hover {
+  color: black;
   background-color: lavender;
+  cursor: pointer;
 }
 
-#loginForm button:hover {
-  background-color: white;
-}
-
-#signupLink {
-  width: 50%;
-  margin: auto;
+.loginEror {
+  color: red;
+  font-size: small;
   text-align: right;
-  color: lavender;
-  font-size: small;
-}
-
-#signupLink a {
-  color: rgb(0, 183, 255);
-}
-
-#loginEror {
-  font-size: small;
-  margin-top: 5px;
+  margin-top: -8px;
+  margin-bottom: 5px;
   visibility: hidden;
 }
