--- a/digital clock/style.css
+++ b/digital clock/style.css
@@ -18,7 +18,7 @@ body {
   border: 10px solid black;
   padding: 10px; 
   font-size: xx-large;
-  color: rgb(255, 51, 51);
+  color: lavender;
   border-radius: 5px;
   margin-top: 50px;
 }
