--- a/guess the number/style.css
+++ b/guess the number/style.css
@@ -6,6 +6,5 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: black;
-  background-color: #9900ff;
+  background-color: lavender;
 }
