--- a/to do list/todo-app/src/App.css
+++ b/to do list/todo-app/src/App.css
@@ -1,14 +1,14 @@
 .App {
-  width: 50%;
+  width: 350px;
   margin: auto;
   background-color: lavender;
   text-align: center;
-  padding: 20px;
   margin-top: 20px;
+  padding: 0px 20px;
 }
 
 .input-sec {
-  margin-bottom: 20px;
+  padding: 20px;
 }
 
 .input-sec > input {
@@ -18,7 +18,7 @@
   border: 1px solid gray;
 }
 
-.input-sec > input[type=submit] {
+.input-sec > input[type="submit"] {
   background-color: gray;
   color: white;
   margin-left: 5px;
@@ -30,7 +30,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid rgb(175, 175, 175);
-  padding: 10px 0px;
+  padding: 10px 20px 15px 20px;
 }
 
 .todo-item:nth-last-child(1) {
@@ -41,13 +41,14 @@
   font-weight: bold;
 }
 
-.status, .delete {
+.status,
+.delete {
   border: none;
   cursor: pointer;
-  margin-right: 5px;
   color: white;
 }
 
 .delete {
   background-color: black;
+  margin-left: 5px;
 }
